--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     <body>
         <section>
             <h1>
-                hi, i'm Lino.<br>
+                Hi, i'm Lino.<br>
                 I'm 29 years old.<br>
                 I'm a musician. I love music and other arts in general.<br><br>
             </h1>
