--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     <body>
         <section>
             <h1>
-                Hi, i'm Lino.<br>
+                hi, i'm Lino.<br>
                 I'm 29 years old.<br>
                 I'm a musician. I love music and other arts in general.<br><br>
             </h1>
@@ -95,7 +95,7 @@
             </p>
             <img class="portrait" src="portrait.png" alt="Portrait" width="432" height="538">
         </section>
-        <button class="button button1"><a href="https://phlexipus.github.io/Landingpage/">Lesley</a></button>
-        <button class="button button2"><a href="https://liselottedj.github.io/Digital-Sprint-Link-Circle/">Liselotte</a></button>
+        <a href="https://phlexipus.github.io/Landingpage/"><button class="button button1">Lesley</button></a>
+        <a href="https://liselottedj.github.io/Digital-Sprint-Link-Circle/"><button class="button button2">Liselotte</button></a>
     </body>
 </html>
